# ocsbincodec-c

./: .gitignore  LICENSE  README.md
ocsbincodec-c/: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile
ocsbincodec-c/doc/headers/: groups.h
ocsbincodec-c/include/: ocsaalph.h  ocsalpha.h  ocsb2nco.h  ocsb32al.h  ocsb64al.h  ocsbalph.h  ocscodec.h  ocserr.h  ocshalph.h  ocsobj.h  ocsralph.h  ocsrand.h
ocsbincodec-c/src/: ocsaalph.c  ocsalpha.c  ocsb2nco.c  ocsb32al.c  ocsb64al.c  ocsbalph.c  ocscodec.c  ocshalph.c  ocsobj.c  ocsralph.c  ocsrand.c
ocsbincodec-test/: .cproject  .project
ocsbincodec-test/src/: Base64CodecTest.cpp  Base64CodecTest.h  CIntegerFileReader.cpp  CIntegerFileReader.h  CIntegerFileReaderTest.cpp  CIntegerFileReaderTest.h  OCSArrayAlphabetTest.cpp  OCSArrayAlphabetTest.h  OCSBase2NCodecTest.cpp  OCSBase2NCodecTest.h  OCSBase32AlphabetTest.cpp  OCSBase32AlphabetTest.h  OCSBase64AlphabetTest.cpp  OCSBase64AlphabetTest.h  OCSBinaryAlphabetTest.cpp  OCSBinaryAlphabetTest.h  OCSHexadecimalAlphabetTest.cpp  OCSHexadecimalAlphabetTest.h  OCSObjectTest.cpp  OCSObjectTest.h  OCSRandomSourceTest.cpp  OCSRandomSourceTest.h  RandomAlphabetGeneratorTest.cpp  RandomAlphabetGeneratorTest.h  main.cpp
ocsbincodec-test/tools/: gen-base64-samples.py
tools/gtestgen/: gtestgengui.py  test.cpp.tpl  test.h.tpl
